tests/error/type_match/base_case_implicit_conversion1.bz
// error: unable to match expression of type 'uint32' to 'uint16'
function test()
{
	let _: uint16 = 0u32;
}
